# fhtagn-test-task

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
templates/: index.html
